--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,17 @@
     <string name="change_password">Ganti Password</string>
     <string name="edit_new_password">Masukkan Password Baru</string>
     <string name="edit_new_konfirmasi_password">Masukkan Konfirmasi Password Baru</string>
+    <string name="memorized_deposit">Setoran Hafalan</string>
+    <string name="choose_teacher">Pilih Ustadz / Ustadzah</string>
+    <string name="choose">Pilih</string>
+    <string name="ustadz_or_ustadzah">Ustad / Ustadzah</string>
+    <string name="guide_deposit">Paduan Setoran Hafalan Dan Konsultasi</string>
+    <string name="rules_1">1. Sesi setoran hafalan per-orang berlangsung selama 10 menit.</string>
+    <string name="rules_2">2. Hubungi guru melalui chat untuk membuat janji tempat dan waktu yang tepat untuk melakukan setoran hafalan.</string>
+    <string name="rules_3">3. Pastikan siswa/i memiliki persiapan yang matang untuk melakukan setoran hafalan.</string>
+    <string name="rules_4">4. Pastikan untuk mereview hafalan sebelum melakukan setoran untuk memastikan keakuratan dan kelancaran</string>
+    <string name="rules_5">5. Jangan lupa untuk mencatat umpan balik dari guru serta perkembangan hafalan untuk memantau kemajuan secara berkala.</string>
+    <string name="rules_6">6. Kamu bisa berkonsultasi dengan guru membahas apa saja yang ingin ditanyakan seputar pembelajaran islam.</string>
+    <string name="anny_queation">Ada yang ingin ditanyakan ?</string>
+    <string name="chat_teacher">Chat Guru</string>
 </resources>
