update surah dan detail surah, sambung ayat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <string name="rules_6">6. Kamu bisa berkonsultasi dengan guru membahas apa saja yang ingin ditanyakan seputar pembelajaran islam.</string>
     <string name="anny_queation">Ada yang ingin ditanyakan ?</string>
     <string name="chat_teacher">Chat Guru</string>
+    <string name="continue_the_verse">Sambung Ayat</string>
+    <string name="choose_surah">Pilih Surat</string>
 </resources>
